shtuar edhe nje rresht me 3 kolona per sherbimet

--- a/template/index.html
+++ b/template/index.html
@@ -44,24 +44,52 @@
             </nav>
         </div>
     </header>
-    <div class="slider-wrapper">
-        <div class="slider-content container">
-            <ul>
-                <li>
-                    <img src="images/cover.jpg" alt="">
-                    <div class="titulli">
-                        <span class="titull1">Lorem Ipsum</span>
-                        <span class="titull2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia recusandae animi odit veritatis</span>
-                    </div>
-                </li>
-            </ul>
+    
+        <div class="slider-wrapper">
+            <div class="slider-content container">
+                <ul>
+                    <li>
+                        <img src="images/cover.jpg" alt="">
+                        <div class="titulli">
+                            <span class="titull1">Lorem Ipsum</span>
+                            <span class="titull2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia recusandae animi odit veritatis</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="row cf" id="contact-row">  
+            <div class="container">
+                <div class="col col-2" id="phone-number" >
+                    <span>TELEFONONI NE <a href="tel:+35511111111">(+355)11111111</a></span>
+                    <p>Mos hezitoni te na kontaktoni.</p>
+                </div>
+                <div class="col col-2" id="reserve-button">
+                    <img src="images/reserve_button_sq.png" alt="">
+                </div>
+            </div>
         </div>
+            <div id="bottom-stripes"></div>
     </div>
-    <!-- <article class="">
-        article
+    <article class="container">
+       <div class="row cf" id="home-3-img">
+           <div class="col-3">
+                <div class="content">
+                   <h2><span>DHOMAT</span></h2>
+                   <img src="images/module7.jpg" alt="">
+                </div>
+           </div>
+           <div class="col-3">
+            <div class="content">
+            <h2><span>Restoranti</span></h2>
+            <img src="images/module5.jpg" alt=""></div>
+            </div>
+           <div class="col-3">
+           <div class="content">
+               <h2><span>Bari</span></h2>
+               <img src="images/module6.jpg" alt="">
+           </div>
+           </div>
+       </div>
     </article>
-    <footer>
-        footer
-    </footer> -->
 </body>
 </html>
