--- a/template/css/style.css
+++ b/template/css/style.css
@@ -226,11 +226,102 @@ nav{
 /**************************
     CONTENT
 **************************/
-article{
-    min-height: -webkit-calc(100% - (160px));
-    min-height: -moz-calc(100% - (160px));
-    min-height: calc(100% - (160px));
+.row{
+    width: 100%;
+    clear: both;
 }
+.row .col-2{
+    width: 50%;
+    float: left;
+}
+#contact-row{
+    margin-top: 50px;
+    background-color: #F5F2EB;
+    clear: both;
+}
+#bottom-stripes{
+    display: block;
+    width: 100%;
+    height: 14px;
+    background-image: url(../images/stripes_bg.png);
+}
+.row .col-2{text-align: right;}
+.row .col-2 p{
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: lighter;
+    font-size: .9em;
+    line-height: 22px;
+}
+#phone-number {
+    box-sizing: border-box;
+    padding-right:80px;
+    text-align: left;
+}
+#phone-number span{
+    text-transform: uppercase;
+    font-size: 28px;
+    line-height: 22px;
+    font-family: 'Source Serif Pro',serif;
+}
+#phone-number a{color:#c94326; text-decoration: none;}
+
+.col-3{
+    width: 33%;
+    float: left;
+}
+#home-3-img .col-3 .content{
+    box-sizing: border-box;
+    padding: 15px;
+}
+#home-3-img h2{
+    font-family: 'Source Serif Pro',serif;
+    font-size: 24px;
+    margin: 0 0 15px;
+    color: #3c3c3c;
+    text-transform: uppercase;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+}
+#home-3-img h2 span{
+    vertical-align: baseline;
+    position: relative;
+    padding: 0 10px;
+}
+#home-3-img h2 span:before{
+    right: 100%;
+}
+#home-3-img h2 span:after{
+    left: 100%;
+}
+#home-3-img h2 span:before,#home-3-img h2 span:after{
+    content: '';
+    position: absolute;
+    width: 100px;
+    /*border-top: 1px solid #e3e3e3;*/
+    border-top: 1px solid #a3a3a3;
+    top: .5em;
+    display: block;
+}
+#home-3-img img:after, #home-3-img img:before{
+    transform: rotate(-5deg);
+    background: rgba(0,0,0,0.7) none repeat scroll 0% 0%;
+    bottom: 10px;
+    box-shadow: 0 5px 10px #000;
+    content: "";
+    left: 10px;
+    max-width: 300px;
+    position: absolute;
+    height: 20px;
+    width: 50%;
+    z-index: -1;
+}
+#home-3-img img:after {
+    transform: rotate(5deg);
+    left: auto;
+    right: 10px;
+}
+#home-3-img img{width: 100%; display: block;position: relative;}
 .normalContent{
     float: left;
     width: 70%;
